# scraping-flink-docs

./: .gitignore  .replit  README.md  pyproject.toml
.github/: copilot-instructions.md
attached_assets/: Pasted-2025-08-14-18-53-10-scrapy-utils-log-INFO-Scrapy-2-13-3-started-bot-flink-docs-2025-08-14-18-5-1755197655323_1755197655323.txt
documentation/: IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_GUIDE.md  QUICKSTART.md  VISUAL_GUIDE.md  WHAT_WAS_ADDED.md
firecrawl-flink_docs/: flink_firecrawl_output.json  ollama_prompt_test_script.py  play-pen.ipynb  run-crawling.py
firecrawl-flink_docs/data/: flink_firecrawl_response_full.txt
firecrawl-flink_docs/models/: metadata.py  processdata.py
firecrawl_flink_docs/: dev-notebook.ipynb  example-orchestrator.ipynb  example-scrape_with_orchestrator.py  ollama_prompt_test_script.py  run-scraping.py  sync_mdfile_to_db.py
firecrawl_flink_docs/data/: db_cleaning.sqbpro  flink_firecrawl_markdown.md  llama_response.json  scraping.db  scraping.db-journal
firecrawl_flink_docs/models/: __init__.py  database.py  orchestrator.py  processdata.py
firecrawl_flink_docs/single_use_scripts/: ollama_headings_test_output.json  ollama_prompt_test_script.py  sync_mdfile_to_db.py  sync_ollama_summaries_to_db.py  test_ollama_headings_parsing.py
flink_docs/: output.json  scrapy.cfg
flink_docs/flink_docs/: items.py  pipelines.py  settings.py
flink_docs/flink_docs/spiders/: flink_spider.py
initial-progress/scrapy-flink_docs/: metadata.sqlite  output.json
scrapy-flink_docs/flink_docs/: pipelines.py
(+326 files in other folders)
