[project]
name = "flink-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "firecrawl>=4.12.0",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
    "scrapy>=2.13.3",
    "typing>=3.10.0.0",
    "sqlalchemy>=2.0.0",
    "polars>=1.37.1",
    "ipython>=9.8.0",
    "google-genai>=1.62.0",
]
